<resources>
    <string name="app_name">Comunic</string>
    <string name="activity_login_header">Login</string>
    <string name="activity_login_email_hint">Email address</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_submit_form">Login</string>
    <string name="activity_login_err_invalid_password">The password is invalid!</string>
    <string name="activity_login_err_invalid_email">The email specified is invalid !</string>
    <string name="activity_login_err_invalid_credentials">The connexion couldn\'t be etablished. Please check your credentials !</string>
    <string name="err_no_internet_connection">No Internet connexion !</string>
    <string name="activity_login_err_server_response">The server sent an unexcepted response…</string>
    <string name="main_menu_logout">Sign out</string>
    <string name="popup_signout_title">Sign out</string>
    <string name="popup_signout_message">Are you sure do you want to sign out ?</string>
    <string name="popup_signout_confirm_button">Sign out</string>
    <string name="popup_signout_cancel_button">Cancel</string>
    <string name="navigation_bottom_friends_item">Friends</string>
    <string name="navigation_bottom_me_item">Me</string>
    <string name="fragment_friendslist_err_refresh">Couldn\'t refresh friends list !</string>
    <string name="fragment_friendslist_err_get_userinfos">Couldn\'t get information about your friends!</string>
    <string name="user_status_online">Online</string>
    <string name="user_status_offline">Offline</string>
    <string name="action_friends_delete">Delete friend</string>
    <string name="popup_deletefriend_title">Remove friend</string>
    <string name="popup_deletefriend_message">Are you sure do you want to remove this friend from your friend list ? You will have to make a new friendship request to get this friend back !</string>
    <string name="popup_deletefriend_button_confirm">Delete</string>
    <string name="popup_deletefriend_button_cancel">Cancel</string>
    <string name="action_friends_accept_request">Accept</string>
    <string name="user_image_description">User Image Account</string>
    <string name="navigation_bottom_conversations_item">Conversations</string>
    <string name="fragment_conversationslist_create_button">Create a new conversation</string>
    <string name="action_friends_respond_request">Respond request</string>
    <string name="action_friends_deny_request">Deny</string>
    <string name="popup_respond_friendship_request_title">Respond to the request</string>
    <string name="popup_respond_friendship_request_message">Do you want to accept or deny this friendship request ?</string>
    <string name="fragment_conversationslist_err_get_list">An error occurred while retrieving conversations list !</string>
    <string name="conversations_members_number">%d members</string>
    <string name="date_now">now</string>
    <string name="date_seconds">seconds</string>
    <string name="date_minutes">minutes</string>
    <string name="date_min">min</string>
    <string name="date_sec">sec</string>
    <string name="date_day">day</string>
    <string name="date_days">days</string>
    <string name="date_month">month</string>
    <string name="date_months">months</string>
    <string name="date_year">year</string>
    <string name="date_years">years</string>
    <string name="date_h">h</string>
    <string name="date_m">m</string>
    <string name="date_s">s</string>
    <string name="date_hours">date_hours</string>
    <string name="err_get_user_info">Could not get user information !</string>
    <string name="fragment_conversation_err_load_message">Could not load messages!</string>
    <string name="fragment_conversation_message_image">Conversation message image</string>
    <string name="conversation_message_send">Send</string>
    <string name="conversation_message_err_too_short">The message is too short !</string>
    <string name="conversation_message_err_send">The message could not be sent! Please check your message and try again…</string>
    <string name="fragment_conversation_new_message_placeholder">New message…</string>
    <string name="conversation_message_add_image">Add an image</string>
    <string name="conversation_message_remove_image_popup_title">Remove image</string>
    <string name="conversation_message_remove_image_popup_message">Do you want to remove selected image ?</string>
    <string name="conversation_message_remove_image_popup_confirm">Yes</string>
    <string name="conversation_message_remove_image_popup_cancel">No</string>
    <string name="fragment_friendslist_title">Friends</string>
    <string name="fragment_conversationslist_title">Conversations</string>
    <string name="fragment_userinfos_title">About me</string>
    <string name="fragment_conversation_title">Conversation</string>
    <string name="fragment_conversation_err_getconvinfos">Could not get information about the conversation !</string>
    <string name="action_conversation_delete">Delete</string>
    <string name="action_conversation_update">Update</string>
    <string name="popup_deleteconversation_title">Remove conversation</string>
    <string name="popup_deleteconversation_messsage">Are you sure do you want to remove this conversation ? All the messages you posted will be deleted. If you are the owner of the conversation, all the messages will be removed.</string>
    <string name="popup_deleteconversation_confirm">Delete</string>
    <string name="popup_deleteconversation_cancel">Cancel</string>
    <string name="fragment_conversationslist_err_del_conversation">Could not delete conversation !</string>
    <string name="fragment_conversation_no_msg">No message yet.</string>
    <string name="fragment_update_conversation_title_create">Create a conversation</string>
    <string name="fragment_update_conversation_title_update">Update a conversation</string>
    <string name="fragment_update_conversation_name_placeholder">Conversation name</string>
    <string name="fragment_update_conversation_button_create">Create</string>
    <string name="fragment_update_conversation_button_update">Update</string>
    <string name="fragment_update_conversation_follow">Follow the conversation</string>
    <string name="fragment_update_conversation_addmember">Add a member</string>
    <string name="activity_searchuser_title">Search user</string>
    <string name="activity_searchuser_text_placeholder">User name</string>
    <string name="err_search_user">Could not search user !</string>
    <string name="err_add_member_double">This user is already a member of the conversation!</string>
    <string name="err_get_users_info">Could not get information about users !</string>
    <string name="err_conversation_need_members">Please add at least one member to the conversation !</string>
    <string name="err_conversation_create">Could not create conversation !</string>
    <string name="fragment_update_conversation_members_menu_delete">Remove</string>
    <string name="err_get_conversation_info">Could not get information about the conversation !</string>
    <string name="err_conversation_update">Could not update conversation !</string>
    <string name="action_friends_start_private_conversation">Private conversation</string>
    <string name="err_get_private_conversation">Could not get a private conversation !</string>
    <string name="dialog_loading_msg">Loading…</string>
    <string name="action_latest_posts">Latest posts</string>
    <string name="err_get_user_posts">Couldn\'t get user posts !</string>
    <string name="post_visibility_public">public</string>
    <string name="post_visibility_friends">friends</string>
    <string name="post_visibility_private">private</string>
    <string name="post_image_description">Post image (if any)</string>
    <string name="new_comment_hint">New comment</string>
    <string name="err_invalid_comment_content">Specified comment content seems to be invalid…</string>
    <string name="err_create_comment">An error occurred while trying to create comment!</string>
    <string name="action_send">Send</string>
    <string name="action_delete_comment">Delete</string>
    <string name="popup_deletecomment_title">Delete comment</string>
    <string name="popup_deletecomment_message">Are you sure do you want to delete this comment? The operation is unrecoverable !</string>
    <string name="popup_deletecomment_cancel">No</string>
    <string name="popup_deletecomment_confirm">Yes</string>
    <string name="err_delete_comment">An error occurred while trying to delete the comment !</string>
    <string name="comment_action_btn_description">Actions on comment</string>
    <string name="post_action_btn_description">Actions on post</string>
    <string name="action_delete_post">Delete</string>
    <string name="popup_deletepost_title">Delete post</string>
    <string name="popup_deletepost_message">Are you sure do you want to delete this post? You will not be able to undo this operation!</string>
    <string name="popup_deletepost_cancel">No</string>
    <string name="popup_deletepost_confirm">Yes</string>
    <string name="err_delete_post">An error occurred while trying to delete post! Please try again later…</string>
    <string name="new_post_hint">New post…</string>
    <string name="post_action_send">Send</string>
    <string name="navigation_bottom_notif_item">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="preference_background_notif_title">Background notifications refresh</string>
    <string name="preference_background_notif_summary">This allow you to stay informed about the latest notifications on Comunic by checking at a regular interval the existence of notifications, even if the application is closed.</string>
    <string name="button_send_friend_request">Send request</string>
    <string name="button_cancel_friend_request">Cancel request</string>
    <string name="button_accept_friend_request">Accept request</string>
    <string name="button_reject_friend_request">Reject request</string>
    <string name="preference_debug_mode_title">Enable debug mode</string>
    <string name="preference_debug_mode_summary">Enable this option to get access to development / debug features. (Need application restart to make effect)</string>
    <string name="main_menu_search_user">Search user</string>
    <string name="action_personal_page">My Page</string>
    <string name="preference_crash_reporting_title">Send crash reports</string>
    <string name="preference_crash_reporting_summary">Help us improve Comunic by sending anonymous reports when the application crash.</string>
    <string name="action_create_account">Create an account</string>
    <string name="form_create_account_notice">Please fill the following fields to create your account:</string>
    <string name="form_create_account_first_name">First name</string>
    <string name="form_create_account_last_name">Last name</string>
    <string name="form_create_account_email">Your email address</string>
    <string name="form_create_account_password">Password</string>
    <string name="form_create_account_confirm_password">Repeat password</string>
    <string name="form_create_account_terms">I have read and accepted the terms of use of Comunic.</string>
    <string name="form_create_account_terms_open">Open</string>
    <string name="action_about">About</string>
    <string name="action_reject_friend_request">Reject</string>
    <string name="notice_request">Requested</string>
    <string name="button_follow">Follow</string>
    <string name="button_following">Following</string>
    <string name="action_account_settings">Account Settings</string>
    <string name="button_reject_call">Reject call</string>
    <string name="button_accept_call">Accept call</string>
    <string name="title_incoming_call">Incoming call</string>
</resources>