<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Enable and / or disable notification service -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_background_notification_refresh"
        android:title="@string/preference_background_notif_title"
        android:summary="@string/preference_background_notif_summary"/>


    <!-- Enable and / or disable debug mode -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="enable_debug_mode"
        android:title="@string/preference_debug_mode_title"
        android:summary="@string/preference_debug_mode_summary" />

    <!-- Enable or disable crash reporting -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="enable_crash_reporting"
        android:title="@string/preference_crash_reporting_title"
        android:summary="@string/preference_crash_reporting_summary"/>

</PreferenceScreen>