<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_notifications"
        android:title="@string/navigation_bottom_notif_item"
        android:icon="@drawable/ic_notif" />

    <item
        android:id="@+id/action_friendslist"
        android:title="@string/navigation_bottom_friends_item"
        android:icon="@drawable/ic_friends"
        />

    <item
        android:id="@+id/action_personal_page"
        android:title="@string/action_personal_page"
        android:icon="@drawable/ic_user" />

    <item
        android:id="@+id/action_latest_posts"
        android:title="@string/action_latest_posts"
        android:icon="@drawable/ic_sync_black_24dp" />

    <item
        android:id="@+id/action_conversations"
        android:title="@string/navigation_bottom_conversations_item"
        android:icon="@drawable/ic_menu_conversations" />
</menu>