<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Progres bar -->
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

    <!-- Conversation name -->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/fragment_update_conversation_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fragment_update_conversation_name_placeholder"
            android:inputType="textCapSentences"
            android:maxLines="1"
            />

    </android.support.design.widget.TextInputLayout>

    <!-- Conversation members -->
    <ListView
        android:id="@+id/fragment_update_conversation_members"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/fragment_update_conversation_addmember"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="0dp"
        android:text="@string/fragment_update_conversation_addmember"
        />

    <!-- Follow or not the conversation -->
    <CheckBox
        android:id="@+id/fragment_update_conversation_follow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_update_conversation_follow"
        android:checked="true" /> <!-- Checked by default -->

    <!-- Create the conversation -->
    <Button
        android:id="@+id/fragment_update_conversation_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_update_conversation_button_create"
        android:background="@color/colorPrimary"/>

</LinearLayout>