<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <!-- Available actions -->
    <LinearLayout
        android:id="@+id/buttons_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_send_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_send_friend_request"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/button_cancel_request"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_friend_request"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_send_request" />

        <Button
            android:id="@+id/button_accept_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/holo_green_dark"
            android:textColor="@android:color/white"
            android:text="@string/button_accept_friend_request"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_cancel_request" />

        <Button
            android:id="@+id/button_reject_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/holo_red_dark"
            android:text="@string/button_reject_friend_request"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_accept_request" />

        <Button
            android:id="@+id/button_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_follow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_reject_request" />

        <Button
            android:id="@+id/button_following"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/button_following"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_follow" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttons_list"
        app:layout_constraintEnd_toEndOf="@+id/buttons_list"
        app:layout_constraintStart_toStartOf="@+id/buttons_list"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>